# PySATL-CPD-Module

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  generate_dataset.py  pyproject.toml  requirements.txt
.github/workflows/: build-and-test.yaml  check.yaml
CPDShell/: CPDShell.py  Shell.py  knn_example.py  labeled_data.py  main.py  shell.py
CPDShell/Core/: CPDCore.py  cpd_core.py  scenario.py
CPDShell/Core/algorithms/: abstract_algorithm.py  bayesian_algorithm.py  graph_algorithm.py  kliep_algorithm.py  kliep_cpd.py  kliep_rulsif_algorithm.py  knn_algorithm.py  rulsif_algorithm.py  rulsif_cpd.py
CPDShell/Core/algorithms/BayesianCPD/: __init__.py
CPDShell/Core/algorithms/BayesianCPD/abstracts/: __init__.py  idetector.py  ihazard.py  ilikelihood.py  ilocalizer.py
CPDShell/Core/algorithms/BayesianCPD/detectors/: __init__.py  (+2 more)
CPDShell/Core/algorithms/GpraphCPD/: GraphMatrix.py  Graph_CPD.py  graph_cpd.py  graph_list.py
CPDShell/Core/algorithms/KNNCPD/: cpd.py  knn_graph.py  knn_heap.py
CPDShell/Core/scrubber/: scrubber.py
CPDShell/generator/: config_parser.py  dataset_description.py  distributions.py  generator.py  saver.py
tests/: test.py
tests/test_CPDShell/: test_Shell.py  test_labeled_data.py  test_shell.py
tests/test_CPDShell/test_Core/: test_CPDCore.py  test_cpd_core.py
tests/test_CPDShell/test_Core/test_algorithms/: test_graph_algorithm.py
tests/test_CPDShell/test_Core/test_scrubber/: test_scrubber.py
tests/test_CPDShell/test_configs/: test_config_1.yml  test_config_exp.yml
tests/test_CPDShell/test_generator/: test_generator.py
(+18 files in other folders)
