[tool.poetry]
name = "pysatl-cpd"
version = "0.1.0"
description = "Batch module for changepoint detection"
authors = ["Lesh79, alexdtat, Alexey Veter, Aleksandra Listkova, Artem Romanyuk"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Lesh79/PySATL-CPD-Module"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
mypy = "^1.10.1"
black = "^24.4.2"
ruff = "^0.5.2"
pre-commit = "^3.7.1"

[tool.black]
line-length = 120

[tool.ruff]
target-version = "py312"
line-length = 120
indent-width = 4
respect-gitignore = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
skip-magic-trailing-comma = false
line-ending = "auto"


[tool.ruff.lint]
select = ["A", "E", "F", "I", "PL", "RUF", "SIM", "UP", "W"]
ignore = ["PLR0913"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
